--- a/index.html
+++ b/index.html
@@ -1,61 +1,124 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>동진안전 포털</title>
-  <style>
-    body {
-      font-family: "맑은 고딕", sans-serif;
-      background: #f4f6f8;
-      text-align: center;
-      margin: 0;
-      padding: 40px;
-    }
-    h1 { color: #0d6efd; margin-bottom: 40px; }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      max-width: 900px;
-      margin: 0 auto;
-    }
-    .card {
-      background: white;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-      transition: 0.3s;
-      text-decoration: none;
-      color: black;
-    }
-    .card:hover { transform: translateY(-5px); box-shadow: 0 6px 12px rgba(0,0,0,0.15); }
-    .card h2 { color: #0d6efd; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>동진안전 포털</title>
+<style>
+  body {
+    font-family: "맑은 고딕", sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #f4f6f8 url('background.jpg') no-repeat center top;
+    background-size: cover;
+  }
+
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    background-color: rgba(0,89,179,0.9);
+    padding: 20px;
+    border-radius: 12px;
+    color: white;
+    margin: 20px;
+  }
+
+  header img { height: 60px; }
+  header h1 { margin: 0; font-size: 2em; font-weight: bold; }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
+    max-width: 1000px;
+    margin: 40px auto;
+    padding: 0 20px;
+  }
+
+  .card {
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    transition: transform 0.3s, box-shadow 0.3s;
+    text-decoration: none;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card h2 { margin-bottom: 10px; font-size: 1.5em; }
+  .card p { margin: 0; text-align: center; }
+
+  .card:hover { transform: translateY(-6px); box-shadow: 0 8px 20px rgba(0,0,0,0.25); }
+
+  .smart { background-color: #0d6efd; }
+  .log { background-color: #198754; }
+  .supervisor { background-color: #ffc107; color: black; }
+  .machine { background-color: #dc3545; }
+  .quiz { background-color: #6f42c1; }
+
+  .icon {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+  }
+
+  footer {
+    margin-top: 50px;
+    font-size: 0.9em;
+    color: #666;
+    text-align: center;
+  }
+
+  @media(max-width:600px){
+    header { flex-direction: column; gap: 10px; }
+  }
+</style>
 </head>
 <body>
-  <h1>🏗️ 동진안전 포털</h1>
-  <div class="grid">
-    <a class="card" href="https://es1063122-creator.github.io/dongjin-safety/smart-check.html">
-      <h2>스마트 안전점검</h2>
-      <p>현장별 점검사항을 AI로 관리</p>
-    </a>
-    <a class="card" href="https://es1063122-creator.github.io/dongjin-safety/daily-log.html">
-      <h2>안전점검일지</h2>
-      <p>일일 점검 및 조치사항 기록</p>
-    </a>
-    <a class="card" href="https://es1063122-creator.github.io/dongjin-safety/supervisor.html">
-      <h2>관리감독자 점검</h2>
-      <p>관리감독자별 점검사항 관리</p>
-    </a>
-    <a class="card" href="https://es1063122-creator.github.io/dongjin-safety/machine-check.html">
-      <h2>건설기계 점검</h2>
-      <p>장비별 안전점검 내역 관리</p>
-    </a>
-    <a class="card" href="https://es1063122-creator.github.io/dongjin-safety/quiz.html">
-      <h2>관리감독자 퀴즈</h2>
-      <p>안전지식 퀴즈로 역량 강화</p>
-    </a>
-  </div>
+
+<header>
+  <img src="logo.png" alt="동진토건 로고">
+  <h1>동진안전 포털</h1>
+</header>
+
+<div class="grid">
+  <a class="card smart" href="https://es1063122-creator.github.io/dongjin-safety/smart-check.html">
+    <div class="icon">🛠️</div>
+    <h2>스마트 안전점검</h2>
+    <p>현장별 점검사항을 AI로 관리</p>
+  </a>
+
+  <a class="card log" href="https://es1063122-creator.github.io/dongjin-safety/daily-log.html">
+    <div class="icon">📄</div>
+    <h2>안전점검일지</h2>
+    <p>일일 점검 및 조치사항 기록</p>
+  </a>
+
+  <a class="card supervisor" href="https://es1063122-creator.github.io/dongjin-safety/supervisor.html">
+    <div class="icon">👷</div>
+    <h2>관리감독자 점검</h2>
+    <p>관리감독자별 체크리스트</p>
+  </a>
+
+  <a class="card machine" href="https://es1063122-creator.github.io/dongjin-safety/machine-check.html">
+    <div class="icon">🚧</div>
+    <h2>건설기계 점검</h2>
+    <p>장비별 안전점검 내역 관리</p>
+  </a>
+
+  <a class="card quiz" href="https://es1063122-creator.github.io/dongjin-safety/quiz.html">
+    <div class="icon">🧠</div>
+    <h2>관리감독자 퀴즈</h2>
+    <p>안전지식 역량 강화</p>
+  </a>
+</div>
+
+<footer>
+  © 2025 동진토건 안전관리팀. All Rights Reserved.
+</footer>
+
 </body>
 </html>
